# flat_log_parser

./: README.md  devnotes_to_obs_vault.py  pyproject.toml
flat_log_parser/: __init__.py  decomposing_devnotes.ipynb  functions.py
