[tool.poetry]
name = "flat-log-parser"
version = "0.1.0"
description = ""
authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
frontmatter = "^3.0.8"
python-dateutil = "^2.9.0.post0"
regex = "^2024.5.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
